# ganesha

./: .gitignore  Cargo.toml  Makefile.toml  README.md
ganesha-api/: Cargo.toml
ganesha-api/src/: lib.rs  main.rs
ganesha-api/src/errors/: mod.rs
ganesha-api/src/graphql/: context.rs  misc_queries.rs  schema.rs
ganesha-api/src/statement/: mod.rs  statement_creating.rs  statement_position.rs  statement_selecting.rs
ganesha-api/src/user/: auth_payload.rs  jwt.rs  login.rs  mod.rs  password.rs  signup.rs  user_selecting.rs  username.rs
ganesha-web/: package.json  pnpm-lock.yaml
ganesha-web/src/lib/: Editor.svelte  Footer.svelte  Logo.svelte  StatementCreator.svelte  Version.svelte  Viewer.svelte  auth.ts  graphql.ts  statement.ts  user.ts
ganesha-web/src/routes/: __layout.svelte  index.svelte  login.svelte  signup.svelte
ganesha-web/src/routes/s/: [id].svelte
ganesha-web/src/routes/u/: [username].svelte
