[package]
authors = ["Louis Birla <louis.birla@gmail.com>"]
edition = "2018"
name = "ganesha-api"
version = "0.1.0"
publish = false

[dependencies]
chrono = "0.4.19"
dotenv = "0.15.0"
rand = "0.8.4"
tokio = { version = "1.7.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.4.6"
thiserror = "1.0"

## Server
async-graphql = "3.0"
async-graphql-warp = "3.0"
warp = "0.3.1"

## Logging
log = "0.4.13"
pretty_env_logger = "0.4.0"

# ## Sign up
rust-argon2 = "1.0"
jsonwebtoken = "8.0"

[dependencies.mongodb]
version = "2.0.0-beta.2"
default-features = false
features = ["tokio-runtime"]
